# TAS-PHYParser

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE  PHYParser.hpp  README.md
src/: enums.hpp  errors.hpp  phy.cpp  phy.hpp
src/helpers/: check-bounds.hpp  offset-data-view.cpp  offset-data-view.hpp  text-section-parser.cpp  text-section-parser.hpp
src/structs/: common.hpp  mopp.hpp  phy.hpp
